# harbour-shmoose

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  README.rst  harbour-shmoose.pro  howto.txt  index.html  shmoose.pro  shmoose.qrc  swift.pri
.github/workflows/: build.yml  codeql.yml  gh-pages.yml
doc/architecture/: index.adoc
doc/architecture/images/: abstract_solution.plantuml  building_blocks.plantuml  deployment_smart_phone.plantuml  technical_context.plantuml  use_case.plantuml  whitebox.plantuml
doc/architecture/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_design_decisions.adoc  10_quality_scenarios.adoc  11_technical_risks.adoc  12_glossary.adoc
images/: building_blocks.plantuml  deployment_testing.plantuml  technical_context.plantuml  use_case.plantuml  whitebox.plantuml
resources/: harbour-shmoose-omemo-message.conf  harbour-shmoose-omemo.desktop  harbour-shmoose.desktop
resources/qml/: main.qml
resources/qml/cover/: CoverPage.qml
resources/qml/pages/: AboutPage.qml  AccountPage.qml  AttachementPathSelectorPage.qml  AttachmentPathsPage.qml  ContactSettingsPage.qml  ContactsPage.qml  ConversationsPage.qml  CreateContactDialog.qml  ImagePage.qml  JoinRoomDialog.qml  LoginPage.qml  MenuPage.qml  MessageStatusPage.qml  MessagingPage.qml  MessagingSettingsPage.qml  OkDialog.qml  PathSelectorPage.qml  PreferencesPage.qml  SettingsPage.qml  VideoPage.qml
resources/translations/: de_DE.qm  de_DE.ts  en_GB.qm  en_GB.ts  es_BO.qm  es_BO.ts  es_GT.qm  es_GT.ts  fr_FR.qm  fr_FR.ts  harbour-shmoose-es.ts  hr-HR.qm  hr-HR.ts  nb_NO.qm  nb_NO.ts  nl.qm  nl.ts  shmoose.ts  sv_SE.qm  sv_SE.ts  zh_CN.qm  zh_CN.ts
rpm/: harbour-shmoose.spec
scripts/: deploy_to_gh_pages.sh
scripts/travis/: reset_ejabberd.sh  testing.sh  unit_testing.sh
source/: ClientXmlFileTracer.cpp  ClientXmlFileTracer.h  ConnectionHandler.cpp  ConnectionHandler.h  DiscoInfoHandler.cpp  DiscoInfoHandler.h  FileModel.cpp  FileModel.h  FileTransferController.cpp  FileTransferController.h  HttpUploadSlotRequest.cpp  HttpUploadSlotRequest.h  ImageProcessing.cpp  ImageProcessing.h  IpHeartBeatWatcher.cpp  IpHeartBeatWatcher.h  MessageHandler.cpp  MessageHandler.h  MucCollection.cpp  MucCollection.h  MucManager.cpp  MucManager.h  PresenceHandler.cpp  PresenceHandler.h  ReConnectionHandler.cpp  ReConnectionHandler.h  RosterContoller.cpp  RosterContoller.h  RosterController.cpp  RosterController.h  RosterItem.cpp  RosterItem.h  Settings.cpp  Settings.h  Shmoose.cpp  Shmoose.h  System.cpp  System.h  XmlProcessor.cpp  XmlWriter.cpp  (+4 more)
source/base/: Client.cpp  Client.h  CryptoHelper.cpp  CryptoHelper.h  DiscoInfoHandler.cpp  DiscoInfoHandler.h  FileModel.cpp  FileModel.h  MessageHandler.cpp  MessageHandler.h  Settings.cpp  Settings.h  Shmoose.cpp  Shmoose.h  System.cpp  System.h  XmlProcessor.cpp  XmlProcessor.h
source/bot/: CommandProcessor.cpp  CommandProcessor.h  main.cpp
source/contacts/: PresenceHandler.cpp  PresenceHandler.h  RosterController.cpp  RosterController.h  RosterItem.cpp  RosterItem.h
source/dbus/: DbusCommunicator.cpp  DbusCommunicator.h  main.cpp
source/media/: CapturePicture.cpp  CapturePicture.h
source/networkconnection/: ConnectionHandler.cpp  ConnectionHandler.h  ReConnectionHandler.cpp  ReConnectionHandler.h
source/persistence/: Database.cpp  Database.h  GcmController.cpp  GcmController.h  MessageController.cpp  MessageController.h  Persistence.cpp  Persistence.h  SessionController.cpp  SessionController.h
source/qml/: ChatPage.qml  ContactsView.qml  LoginPage.qml  MessageView.qml  RosterPage.qml  SendView.qml  chat.qml  main.qml
source/qml/dummydata/: messageController.qml  rosterList.qml  shmoose.qml
source/qml2/: ContactsView.qml  MessageView.qml  SendView.qml  main.qml
source/room/: MucAffiliations.cpp  MucAffiliations.h  MucCollection.cpp  MucCollection.h  MucManager.cpp  MucManager.h  MucRequest.h
source/xep/chatMarkers/: ChatMarkers.cpp  ChatMarkers.h
source/xep/httpFileUpload/: DownloadManager.cpp  DownloadManager.h  FileWithCypher.cpp  FileWithCypher.h  HttpFileUploadManager.cpp  HttpFileUploadManager.h  HttpFileuploader.cpp  HttpFileuploader.h  ImageProcessing.cpp  XmlHttpUploadContentHandler.cpp  XmlHttpUploadContentHandler.h
source/xep/mam/: MamManager.cpp  MamManager.h  MamRequest.h
source/xep/omemo/: BundleDeviceListRequest.h  CToCxxProxy.cpp  CToCxxProxy.h  LurchAdapter.cpp  LurchAdapter.h  LurchTypes.h  Omemo.cpp  Omemo.cpp.first_dec_of_conversations_omemo_msg  Omemo.h  Omemo.h.first_dec_of_conversations_omemo_msg  RawRequestBundle.h  RawRequestWithFromJid.h  XmppMessageParserClient.cpp  XmppMessageParserClient.h  chat.h  dbus-maybe.h  debug.h  internal.h  iq.h  jabber.h  jabber_mock.h  jutil.h  lurch.c  lurch.h  lurch_prep.h  lurch_wrapper.c  lurch_wrapper.h  pep.h  purple.c  purple.h  purple_mock.h  rawrequestwithfromjid.h  util.h  xmlnode.c  xmlnode.h
source/xep/stanzaId/: StanzaId.cpp  StanzaId.h  StanzaIdPayload.cpp  StanzaIdPayload.h  StanzaIdPayloadParser.cpp  StanzaIdPayloadParser.h  StanzaIdPayloadParserFactory.cpp  StanzaIdPayloadParserFactory.h  StanzaIdPayloadSerializer.cpp  StanzaIdPayloadSerializer.h
source/xep/xmppPing/: PingRequest.h  XmppPingController.cpp  XmppPingController.h
src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  05_building_block_view.adoc  07_deployment_view.adoc  10_quality_scenarios.adoc  11_technical_risks.adoc  12_glossary.adoc  config.adoc
test/config/: ejabberd.yml
test/integration_test/ClientCommunicationTest/: ClientCommunicationTest.pro
test/integration_test/ClientRoomMessagingTest/: ClientRoomMessagingTest.pro
test/integration_test/OmemoTest/: OmemoTest.pro
test/integration_test/RosterTest/: RosterTest.pro
test/unit_tests/CryptopHelperTest/: CryptoHelperTest.pro  tst_cryptohelpertest.cpp  (+1 more)
(+80 files in other folders)
